--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "~48.0.9",
     "expo-location": "~15.1.1",
     "expo-status-bar": "~1.4.4",
+    "lottie-react-native": "^6.0.0-rc.2",
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-dotenv": "^3.4.8",
